--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.25.0  
-requests==2.31.0   
-python-dotenv==1.0.0  
-groq==0.1.0  
-python-dotenv==0.21.0
+gradio 
+requests 
+python-dotenv
+groq
+python-dotenv
